--- a/ml_part/day3_unsupervised/unsupervised/practice_clustering.ipynb
+++ b/ml_part/day3_unsupervised/unsupervised/practice_clustering.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "1. Load and explore the dataset: \n",
     "    - Count number of purchases by customer ID\n",
-    "    - Plot 10 most-purchasing customers(barplot)\n",
+    "    - Plot 10 most-purchasing customers(barplot) - Quantity\n",
     "    \n",
     "    \n",
     "2. Split data into train- and testset(80%/20% ratio)\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
        "4  01-12-2010 08:26       3.39     17850.0  United Kingdom  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,6 +289,7 @@
    "outputs": [],
    "source": [
     "# Plot the data and observe outliers\n",
+    "\n",
     "# TODO"
    ]
   },
@@ -302,6 +303,7 @@
     "from scipy import stats\n",
     "\n",
     "def remove_outliers(df, thresh):\n",
+    "    \n",
     "    z_scores = np.abs(stats.zscore(df))\n",
     "    df = df[(z_scores < thresh).all(axis=1)]\n",
     "    \n",
