--- a/ml_part/project/project_assignment/project_notebook.ipynb
+++ b/ml_part/project/project_assignment/project_notebook.ipynb
@@ -32,14 +32,15 @@
     "    \n",
     "    \n",
     "2. Plot the following statistics on the joined datasets(train_x + train_y):\n",
-    "    - histogram of 10 most purchased products\n",
-    "    - pie chart of all product purchase frequencies\n",
-    "    - which other interesting plots can you think of ? -> extra points\n",
     "\n",
+    "    - histogram of 10 most purchased products\n",
+    "    - pie chart of all product purchase frequencies(use top ten frequencies)\n",
+    "    - which other interesting plots can you think of ? -> extra points\n",
+    "    \n",
     "\n",
     "3. Compute and present the following results on joined data sets, train_x + train_y(you are free to choose any method to present your results):\n",
+    "\n",
     "    - Find the pair of products, that are bought together the most\n",
-    "    - How many customers purchased all the products \n",
     "    - Which product was the least purchased ?\n",
     "\n",
     "\n",
@@ -65,6 +66,7 @@
     "\n",
     "\n",
     "5. Train your model on the training set(=train_x, train_y), and predict an item for the each row in the test set(=test_x).DON'T change the order of the test set:\n",
+    "\n",
     "    - Item-predictions should be in the original string format(=item name)\n",
     "    - You can predict numerical values and then convert them back into strings\n",
     "\n",
@@ -86,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,190 +112,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "      <th>9</th>\n",
-       "      <th>10</th>\n",
-       "      <th>11</th>\n",
-       "      <th>12</th>\n",
-       "      <th>13</th>\n",
-       "      <th>14</th>\n",
-       "      <th>15</th>\n",
-       "      <th>16</th>\n",
-       "      <th>17</th>\n",
-       "      <th>18</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>salmon</td>\n",
-       "      <td>vegetables mix</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>toothpaste</td>\n",
-       "      <td>low fat yogurt</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>herb &amp; pepper</td>\n",
-       "      <td>shrimp</td>\n",
-       "      <td>milk</td>\n",
-       "      <td>spinach</td>\n",
-       "      <td>cake</td>\n",
-       "      <td>chili</td>\n",
-       "      <td>green tea</td>\n",
-       "      <td>light mayo</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              0               1     2        3     4      5          6   \\\n",
-       "0            NaN             NaN   NaN      NaN   NaN    NaN        NaN   \n",
-       "1         salmon  vegetables mix   NaN      NaN   NaN    NaN        NaN   \n",
-       "2            NaN             NaN   NaN      NaN   NaN    NaN        NaN   \n",
-       "3     toothpaste  low fat yogurt   NaN      NaN   NaN    NaN        NaN   \n",
-       "4  herb & pepper          shrimp  milk  spinach  cake  chili  green tea   \n",
-       "\n",
-       "           7    8    9    10   11   12   13   14   15   16   17   18  \n",
-       "0         NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  \n",
-       "1         NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  \n",
-       "2         NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  \n",
-       "3         NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  \n",
-       "4  light mayo  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  "
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_x.head()"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
