--- a/ml_part/project/project_solutions/project_notebook.ipynb
+++ b/ml_part/project/project_solutions/project_notebook.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,19 +89,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_x = pd.read_csv('training_data.csv', header=None)\n",
-    "test_x = pd.read_csv('test_data.csv', header=None)\n",
-    "train_y = pd.read_csv('training_labels.csv', header=None)\n",
-    "test_y = pd.read_csv('test_labels.csv', header=None)"
+    "train_x = pd.read_csv('data/training_data.csv', header=None)\n",
+    "test_x = pd.read_csv('data/test_data.csv', header=None)\n",
+    "train_y = pd.read_csv('data/training_labels.csv', header=None)\n",
+    "test_y = pd.read_csv('data/test_labels.csv', header=None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,268 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([' asparagus', 'NaN', 'almonds', 'antioxydant juice', 'asparagus',\n",
+       "       'avocado', 'babies food', 'bacon', 'barbecue sauce', 'black tea',\n",
+       "       'blueberries', 'body spray', 'bramble', 'brownies', 'bug spray',\n",
+       "       'burger sauce', 'burgers', 'butter', 'cake', 'candy bars',\n",
+       "       'carrots', 'cauliflower', 'cereals', 'champagne', 'chicken',\n",
+       "       'chili', 'chocolate', 'chocolate bread', 'chutney', 'cider',\n",
+       "       'clothes accessories', 'cookies', 'cooking oil', 'corn',\n",
+       "       'cottage cheese', 'cream', 'dessert wine', 'eggplant', 'eggs',\n",
+       "       'energy bar', 'energy drink', 'escalope', 'extra dark chocolate',\n",
+       "       'flax seed', 'french fries', 'french wine', 'fresh bread',\n",
+       "       'fresh tuna', 'fromage blanc', 'frozen smoothie',\n",
+       "       'frozen vegetables', 'gluten free bar', 'grated cheese',\n",
+       "       'green beans', 'green grapes', 'green tea', 'ground beef', 'gums',\n",
+       "       'ham', 'hand protein bar', 'herb & pepper', 'honey', 'hot dogs',\n",
+       "       'ketchup', 'light cream', 'light mayo', 'low fat yogurt',\n",
+       "       'magazines', 'mashed potato', 'mayonnaise', 'meatballs', 'melons',\n",
+       "       'milk', 'mineral water', 'mint', 'mint green tea', 'muffins',\n",
+       "       'mushroom cream sauce', 'napkins', 'nonfat milk', 'oatmeal', 'oil',\n",
+       "       'olive oil', 'pancakes', 'parmesan cheese', 'pasta', 'pepper',\n",
+       "       'pet food', 'pickles', 'protein bar', 'red wine', 'rice', 'salad',\n",
+       "       'salmon', 'salt', 'sandwich', 'shallot', 'shampoo', 'shrimp',\n",
+       "       'soda', 'soup', 'spaghetti', 'sparkling water', 'spinach',\n",
+       "       'strawberries', 'strong cheese', 'tea', 'tomato juice',\n",
+       "       'tomato sauce', 'tomatoes', 'toothpaste', 'turkey',\n",
+       "       'vegetables mix', 'water spray', 'white wine', 'whole weat flour',\n",
+       "       'whole wheat pasta', 'whole wheat rice', 'yams', 'yogurt cake',\n",
+       "       'zucchini'], dtype=object)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_products"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>10</th>\n",
+       "      <th>11</th>\n",
+       "      <th>12</th>\n",
+       "      <th>13</th>\n",
+       "      <th>14</th>\n",
+       "      <th>15</th>\n",
+       "      <th>16</th>\n",
+       "      <th>17</th>\n",
+       "      <th>18</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>salmon</td>\n",
+       "      <td>vegetables mix</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>toothpaste</td>\n",
+       "      <td>low fat yogurt</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>herb &amp; pepper</td>\n",
+       "      <td>shrimp</td>\n",
+       "      <td>milk</td>\n",
+       "      <td>spinach</td>\n",
+       "      <td>cake</td>\n",
+       "      <td>chili</td>\n",
+       "      <td>green tea</td>\n",
+       "      <td>light mayo</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              0               1     2        3     4      5          6   \\\n",
+       "0            NaN             NaN   NaN      NaN   NaN    NaN        NaN   \n",
+       "1         salmon  vegetables mix   NaN      NaN   NaN    NaN        NaN   \n",
+       "2            NaN             NaN   NaN      NaN   NaN    NaN        NaN   \n",
+       "3     toothpaste  low fat yogurt   NaN      NaN   NaN    NaN        NaN   \n",
+       "4  herb & pepper          shrimp  milk  spinach  cake  chili  green tea   \n",
+       "\n",
+       "           7    8    9    10   11   12   13   14   15   16   17   18  \n",
+       "0         NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  \n",
+       "1         NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  \n",
+       "2         NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  \n",
+       "3         NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  \n",
+       "4  light mayo  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  NaN  "
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_x.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,9 +410,51 @@
     "        new_row = np.array([e in row for e in final_products]).astype(int)\n",
     "        X_test = np.vstack([X_test, new_row])\n",
     "\n",
-    "y_train = np.array([np.where(final_products == e) for e in training_labels]).reshape(-1)\n",
-    "y_test = np.array([np.where(final_products == e) for e in test_labels]).reshape(-1)"
+    "y_train = np.array([np.where(final_products == e) for e in train_y]).reshape(-1)\n",
+    "y_test = np.array([np.where(final_products == e) for e in test_y]).reshape(-1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -232,7 +535,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
